--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Analog Clock</title>
+    <title>My Digital Clock</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
